# frameterm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  action.yml  devbox.json  lefthook.yml
.github/workflows/: ci.yml  release.yml  test-action.yml
Formula/: frameterm.rb
bench/: tui-roundtrip-pipe.sh  tui-roundtrip.sh
crates/frameterm/: Cargo.toml
crates/frameterm-lib/: Cargo.toml
crates/frameterm-lib/src/: input.rs  lib.rs  recording.rs  session.rs  snapshot.rs  terminal.rs
crates/frameterm-lib/tests/: await_change.rs  input_overlay.rs  keyboard_input.rs  mouse_input.rs  recording.rs  session_management.rs  snapshot.rs  terminal_control.rs  ui_elements.rs  wait_for.rs
crates/frameterm/src/: client.rs  daemon.rs  main.rs  protocol.rs
skills/frameterm/: SKILL.md
spec/: await_change.feature  input_overlay.feature  keyboard_input.feature  mouse_input.feature  recording.feature  session_management.feature  snapshot.feature  terminal_control.feature  ui_elements.feature  wait_for.feature
