[workspace]
members = ["crates/frameterm", "crates/frameterm-lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
rstest = "0.26"
rstest-bdd = "0.5"
rstest-bdd-macros = "0.5"
assert_cmd = "2"
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
