[package]
name = "frameterm-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
portable-pty = "0.8"
vt100 = "0.15"
sha2 = "0.10"
fontdue = "0.9"
sysinfo = "0.34"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
